# isotropic-lowpoly

./: .gitignore  CMakeLists.txt  readme.md
python/: edge_detect.py  run.py
src/: IOUtils.cpp  IOUtils.h  ImageSampler.h  JCVoronoi.cpp  JCVoronoi.h  lowpoly_cvt.cpp
